Thu Sep 10 22:48:49 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (literal_concat_gen, evstr2dstr_gen): keep literal
	  encoding beginning with an interpolation same as the source file
	  encoding.  [ruby-core:70703] [Bug #11519]

Thu Sep 10 22:15:51 2015  Joe Rafaniello  <jrafanie@redhat.com>

	* process.c (rb_f_spawn): Be more specific regarding "other
	  values" by having "non-zero positive integers" Add nil, the
	  default value, as a possible value and what it means.

	  Try to use more consistent language.
	  [Fix GH-1008]

Thu Sep 10 15:16:02 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb (getmultiline): refactor.

Thu Sep 10 12:17:28 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_build_from_ary_body): register cdhash to the
	  iseq constant body instead of compile time mark array, not to
	  get GCed.  [ruby-core:70708] [Feature #8543]

Wed Sep  9 18:16:14 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/rubygems/stub_specification.rb (Gem::StubSpecification#data):
	  should not change the value of $. when `require`ing gems.
	  this fixed test failures introduced by r51813.

Wed Sep  9 16:55:45 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ruby.c (usage, enable_option, disable_option, process_options): new
	  option `--disable-did_you_mean`.

	* gem_prelude.rb: now requires did_you_mean gem by default if available.

Wed Sep  9 13:38:56 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/extlibs.rb (do_patch): let "patch" command change the
	  working directory and open the patch file there, instead of
	  spawn options, so that proper error message will be shown by the
	  command not just "chdir" or "open".

Wed Sep  9 11:33:05 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* common.mk (update-gems): use BASERUBY instead of RUNRUBY.

Wed Sep  9 11:08:59 2015  Zachary Scott  <zzak@ruby-lang.org>

	* lib/delegate.rb: Remove backtrace cleaning for delegated methods